# l2_zilliqa_makerdao_uk

./: readme.md
docs/: protocol.md
ethereum_contract/: .eslintrc.js  .gitignore  README.md  compile.sh  package-lock.json  package.json
ethereum_contract/contracts/: L2Dex.sol  L2DexEthereum.sol  L2DexQTUM.sol
ethereum_contract/contracts/common/: ERC20.sol  ERC20Token.sol  QRC20.sol  QRC20Token.sol  SafeMath.sol
ethereum_contract/tests/: config.js  deploy.js  helper-ethereum.js  helper-qtum.js
exchange/: .gitlinks  CMakeLists.txt  README.md  TODO.md
exchange/aeron/: circular_buffer.h  command_option.h  command_option_parser.h  configuration.h  market_manager.cpp  publisher.h  subscriber.h  test_itch_publisher.cpp  test_itch_subscriber.cpp  test_ouch_subscriber.cpp  thread.h
exchange/documents/: Doxyfile
exchange/examples/: itch_handler.cpp  market_manager.cpp  matching_engine.cpp
exchange/include/trader/: version.h
exchange/include/trader/l2ex/: itch_handler.h  market_handler.h  ouch_handler.h
exchange/include/trader/matching/: errors.h  errors.inl  fast_hash.h  fast_hash.inl  level.h  level.inl  market_handler.h  market_manager.h  market_manager.inl  order.h  order.inl  order_book.h  order_book.inl  symbol.h  symbol.inl  update.h  update.inl
exchange/include/trader/providers/nasdaq/: itch_handler.h  itch_handler.inl  ouch_handler.h  ouch_handler.inl
exchange/modules/: CMakeLists.txt  aeron.cmake
exchange/performance/: itch_handler.cpp  market_manager.cpp  market_manager_optimized.cpp  market_manager_optimized_aggressive.cpp  matching_engine.cpp
exchange/source/trader/matching/: market_manager.cpp  order.cpp  order_book.cpp
exchange/source/trader/providers/nasdaq/: itch_handler.cpp  ouch_handler.cpp
exchange/tests/: test_itch_handler.cpp  test_market_manager.cpp  test_matching_engine.cpp
sign_example/: README.md  main.go
ws_api/: basicPusher.go  client.go  fastPusher.go  main.go  testPusher.go
ws_api/InterExchange/: aeron_config.go  publisher.go  subscriber.go
ws_api/aeron/: config.go  publisher.go  subscriber.go
ws_api/bitfinex_copy/: copy_service.go
ws_api/cli/: cli.go
ws_api/client/: client.go
ws_api/common/: hub.go  listener.go  utils.go
ws_api/listener/: listener.go
ws_api/messages/: messages.go
ws_api/server/: server.go
ws_api/test/: basicPusher.go
zilliqa_contract/: l2.a07.scilla  l2.a12.scilla  l2.scilla
zilliqa_contract/l2/: l2.composite  package.json
zilliqa_contract/l2/contracts/: l2.scilla  l2.v2.scilla  root.scilla
zilliqa_contract/old/: l2.a01.scilla
zilliqa_contract/old/sign/: sign.composite
zilliqa_contract/old/sign/contracts/: l2.scilla
